# castepkit

./: CHANGELOG.md  HEADER  MANIFEST.in  README.md  pyproject.toml  updateheaders.py
src/castepkit/: config.py  shg.py  utils.py  weighted_dens.py
src/castepkit/wrappers/: atom_cutting.py  ome.py  shg.py  weighted_dens.py
tests/: common.py  test_wrappers.py
tests/data/GaAs/: As_00.recpot  GaAs_Optics.bands  GaAs_Optics.cell  GaAs_Optics.ome_bin  Ga_00.recpot  clean.sh
